samples/_failures_safe/1761529837_a252f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06cb87bc.c: In function ‘parser_init’:
./samples/SAFE/__tmp_06cb87bc.c:153:29: error: ‘lexer_next’ undeclared (first use in this function); did you mean ‘lexer_peek’?
  153 |     parser->current_token = lexer_next
      |                             ^~~~~~~~~~
      |                             lexer_peek
./samples/SAFE/__tmp_06cb87bc.c:153:29: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_06cb87bc.c:153:39: error: expected ‘;’ at end of input
  153 |     parser->current_token = lexer_next
      |                                       ^
      |                                       ;
./samples/SAFE/__tmp_06cb87bc.c:153:5: error: expected declaration or statement at end of input
  153 |     parser->current_token = lexer_next
      |     ^~~~~~
